# nano-die

./: .gitignore  CMakeCache.txt  README.md
src/: CMakeLists.txt  core.cpp  core.hpp  main.cpp
src/imgproc/: filters.hpp
src/io/: image_supplier.hpp  video_image_supplier.cpp  video_image_supplier.hpp
src/ui/: main_window.cpp  main_window.hpp
